problemas cuando el carrito pasa a vacio

--- a/index.html
+++ b/index.html
@@ -113,7 +113,19 @@
          -->
 
             </section>
-            <article class="buy__total"></article>
+            <article class="buy__total">
+                <!-- <div class="total__result">
+                    <div>
+                        <h3 class="total__result--text"> Total:  </h3>
+                        <h2 class="total__result--price"> $ 89.00 </h2>
+                    </div>
+                    <img src="./img/bolsa.png">
+                </div>
+                <button class="boton boton__total"> Comprar </button> -->
+
+                
+            </article>
+                
         </aside>
 
 
