contador de carritos y suma total

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
                 <a class="anchor" href="#"> <h3> Home </h3> </a>
                 <a class="anchor" href="#shop"> <h3> Products </h3> </a>
             </div>
-            <img id="icon__buyCar" class="nav__img--shoping" src="./img/shoppingcart_80945.svg" >
+            <i>
+                <img id="icon__buyCar" class="nav__img--shoping" src="./img/shoppingcart_80945.svg" >
+                <span class="count__Shop"> 0 </span>
+            </i>
+            
         </nav>
         
         <section class="section__portada">
