--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title> Buy Car </title>
 </head>
 <body>
 
@@ -131,6 +131,14 @@
             </article>
                 
         </aside>
+
+        <footer>
+            <p> By: Willian Sang.</p>
+            <a href="https://github.com/WillianSang/EcomerceAcademlo" target="_blank">
+                <img src="./img/github.svg">
+            </a>
+            
+        </footer>
 
 
     </main>
